testdata/baselines/reference/submodule/compiler/jsxRuntimePragma(jsx=react).errors.txt
four.tsx(4,24): error TS2307: Cannot find module 'react' or its corresponding type declarations.
one.tsx(3,24): error TS2307: Cannot find module 'react' or its corresponding type declarations.


==== one.tsx (1 errors) ====
    /// <reference path="/.lib/react16.d.ts" />
    /* @jsxRuntime classic */
    import * as React from "react";
                           ~~~~~~~
!!! error TS2307: Cannot find module 'react' or its corresponding type declarations.
    export const HelloWorld = () => <h1>Hello world</h1>;
    export const frag = <><div></div></>;
    export const selfClosing = <img src="./image.png" />;
==== two.tsx (0 errors) ====
    /// <reference path="/.lib/react16.d.ts" />
    /* @jsxRuntime automatic */
    export const HelloWorld = () => <h1>Hello world</h1>;
    export const frag = <><div></div></>;
    export const selfClosing = <img src="./image.png" />;
==== three.tsx (0 errors) ====
    /// <reference path="/.lib/react16.d.ts" />
    /* @jsxRuntime classic */
    /* @jsxRuntime automatic */
    export const HelloWorld = () => <h1>Hello world</h1>;
    export const frag = <><div></div></>;
    export const selfClosing = <img src="./image.png" />;
==== four.tsx (1 errors) ====
    /// <reference path="/.lib/react16.d.ts" />
    /* @jsxRuntime automatic */
    /* @jsxRuntime classic */
    import * as React from "react";
                           ~~~~~~~
!!! error TS2307: Cannot find module 'react' or its corresponding type declarations.
    export const HelloWorld = () => <h1>Hello world</h1>;
    export const frag = <><div></div></>;
    export const selfClosing = <img src="./image.png" />;
==== index.ts (0 errors) ====
    export * as one from "./one.js";
    export * as two from "./two.js";
    export * as three from "./three.js";
    export * as four from "./four.js";